Fixed icon scale. Added support to cinnamon 4.3 and 4.4

--- a/files/qredshift@quintao/stylesheet.css
+++ b/files/qredshift@quintao/stylesheet.css
@@ -39,11 +39,11 @@
 }
 
 .q-text-bold {
-    font-weight: bold;
+    font-weight: bolder;
 }
 
 .q-text-medium {
-    font-weight: medium;
+    font-weight: normal;
 }
 
 .q-text-bigger {
